--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  image_gallery_saver: ^1.1.0
+  screenshot: ^0.2.0
+  flutter_share_me: ^0.9.1
+  sqflite: ^1.3.1
+
 
 dev_dependencies:
   flutter_test:
